fix main page aligning

--- a/src/app/ubs/ubs/components/ubs-main-page/ubs-main-page.component.scss
+++ b/src/app/ubs/ubs/components/ubs-main-page/ubs-main-page.component.scss
@@ -165,9 +165,6 @@
 
     .main-content-right {
       width: 47.5%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
 
       .conditions,
       .bonuses {
